[f] 217 - fix text overlap problem in Safari
[#114655217] https://www.pivotaltracker.com/story/show/114655217

--- a/common/static/sass/data_tool_page/race_gender_age_tab.sass
+++ b/common/static/sass/data_tool_page/race_gender_age_tab.sass
@@ -3,4 +3,4 @@
 
 @media (min-width: $screen-md-min)
   .race-gender-age-tab
-    max-width: 552px
+    max-width: 612px
